# ros2-turtlesim-fundamentals

./: CLAUDE.md  LICENSE  README.md
src/turtle_bringup/: CMakeLists.txt  package.xml
src/turtle_bringup/launch/: Kill_them_all.launch.py  Polygon.launch.py
src/turtle_msgs/: CMakeLists.txt  package.xml
src/turtle_msgs/msg/: AliveTurtle.msg  KillTurtle.msg
src/turtle_msgs/srv/: ComputeRectangleArea.srv
src/turtle_script/: package.xml  setup.cfg  setup.py
src/turtle_script/turtle_script/: Polygon_drawer.py  area_service_client.py  area_service_server.py  draw_circle.py  score_display.py  turtle_controller.py  turtle_spawner.py
